--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -90,13 +90,13 @@
 .schedule {
   margin-top: 1.8rem;
   padding-left: 1rem;
-  border-left: 4px solid var(--primary-red);
+  border-left: 4px solid var(--primary-brown);
   color: var(--primary-brown);
 }
 
 .schedule h3 {
   margin-bottom: 0.6rem;
-  color: var(--primary-red);
+  color: var(--primary-green);
   font-weight: 700;
 }
 
@@ -105,14 +105,14 @@
   margin-top: 1.5rem;
   font-style: normal;
   padding-left: 1rem;
-  border-left: 4px solid var(--primary-red);
+  border-left: 4px solid var(--primary-brown);
   color: var(--primary-brown);
   line-height: 1.5;
 }
 
 .address h3{
   margin-bottom: 0.6rem;
-  color: var(--primary-red);
+  color: var(--primary-green);
   font-weight: 700;
 }
 
@@ -161,4 +161,8 @@
 .photoPlaceholder:hover {
   border-color: var(--primary-green);
   color: var(--primary-green);
+}
+
+.upcomingEvent{
+    text-align: center;
 }
